# Gym-Managment

./: .gitignore  CMakeLists.txt  README.md  launch-wine.bat  launch-wine.sh  resources.qrc  seed_data.sql
qml/: Main.qml  Theme.qml  qmldir
qml/components/: CollapsibleSidebar.qml  FinanceChart.qml  GymButton.qml  GymComboBox.qml  GymTextArea.qml  GymTextField.qml  MemberListItem.qml  MoneyInput.qml  StatCard.qml
qml/views/: DashboardView.qml  EditMemberDialog.qml  FinanceView.qml  NewSubscriberView.qml  PlansView.qml  SubscriptionsView.qml
src/: main.cpp
src/core/models/: FinancialEntry.cpp  FinancialEntry.h  Member.cpp  Member.h  Payment.cpp  Payment.h  Plan.cpp  Plan.h  Subscription.cpp  Subscription.h
src/core/services/: FinanceEngine.cpp  FinanceEngine.h  SubscriptionManager.cpp  SubscriptionManager.h
src/infrastructure/database/: DatabaseManager.cpp  DatabaseManager.h
src/infrastructure/repositories/: FinancialEntryRepository.cpp  FinancialEntryRepository.h  MemberRepository.cpp  MemberRepository.h  PlanRepository.cpp  PlanRepository.h  SubscriptionRepository.cpp  SubscriptionRepository.h
src/ui/controllers/: DashboardController.cpp  DashboardController.h  GymController.cpp  GymController.h
